# tip

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conan_provider.cmake  conandata.yml  conanfile.py
.github/workflows/: translate.yml
build_folder_reference/settings/: settings.ini
build_folder_reference/themes/: Dark.qss  Hookmark.qss  Mixchat.qss  dark.qss  white.qss
deployment/: database_creation.sql  deploy_windows.bat
deployment/database/: database_creation.sql  drop_tables.sql  insert_default_records.sql  tables_creation.sql
deployment/windows_installer/: tip_setup.iss  tip_setup_offline.iss  tip_setup_online.iss
source/: CMakeLists.txt  main.cpp
source/headers/: Settings.h  fontchanger.h  logger.h  mainwindow.h  options.h  progressbar.h  records_ammount.h  records_on_first_start.h
source/interfaces/: CMakeLists.txt
source/interfaces/database-settings/: database_settings.cpp  database_settings.h
source/interfaces/font-editor/: font_editor.cpp  font_editor.h
source/interfaces/fontchanger/: CMakeLists.txt  fontchanger.cpp  fontchanger.h
source/interfaces/mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
source/interfaces/options/: CMakeLists.txt  options.cpp  options.h
source/interfaces/password-form/: password_form.cpp  password_form.h
source/interfaces/progressbar/: progressbar.cpp  progressbar.h
source/interfaces/records-amount-form/: records_amount_form.cpp  records_amount_form.h
source/interfaces/text-position-selector/: text_position_selector.cpp  text_position_selector.h
source/services/database/: database.h  models.h
source/services/database/models/: database_options_model.h  font_settings_model.h  image_model.h  passwords_model.h
source/services/image-downloader/: image_downloader.cpp  image_downloader.h
source/services/image-printer/: image_printer.cpp  image_printer.h
source/services/logger/: CMakeLists.txt  logger.h
source/services/logger/database/: CMakeLists.txt
source/services/logger/logger/: CMakeLists.txt
source/services/logger/settings/: CMakeLists.txt  Settings.h
source/services/settings/: const_options.h  settings.cpp  settings.h  settings_manager.cpp  settings_manager.h
source/services/settings/ini-parser/: inicpp.h
source/services/text-painter/: text_painter.cpp  text_painter.h
source/services/theme-loader/: theme_loader.cpp  theme_loader.h
source/sources/: fontchanger.cpp  mainwindow.cpp  options.cpp  progressbar.cpp  records_ammount.cpp  records_on_first_start.cpp
source/ui/: database_settings.ui  font_editor.ui  fontchanger.ui  mainwindow.ui  options.ui  password_form.ui  progressbar.ui  records_ammount.ui  records_amount_form.ui  records_on_first_start.ui  text_position_selector.ui
source/ui/windows/: database_settings.ui  font_editor.ui  fontchanger.ui  mainwindow.ui  options.ui  progressbar.ui  text_position_selector.ui
